css/order.css
/*Extra small devices (small phones, 350px and down)*/

body
{
    text-align: center;
    padding-top: 70px;
    color: black;
	font-family: 'Roboto' ,sans-serif;
}
h1
{margin-bottom:calc(5px + 0.5vw)}
body,
h3
{
	font-size: calc(15px + 1.5vw);
	line-height: 1.3;
}

select, input[type='text'] , textarea, input[type='tel'] , input[type='email']
{
	color: gray;
	border-radius: calc(10px + 1.5vw);
	border: calc(2px + 0.07vw) solid gray;
	background-color: white;
	width: 100%;
	padding: calc(10px + 1.5vw);
}
select, input[type='text'], textarea,
#email,
#telnum
{
	display: inline-block;
	width: 95%;
	margin: 10px 0 10px 0;
}
select:hover,
select:focus,
input[type='text']:hover , input[type='tel']:hover , input[type='email']:hover,
input[type='text']:focus , input[type='tel']:focus , input[type='email']:focus,
textarea:hover,
textarea:focus
{
	border-color: black;
	color: black;
    outline: none;
}

textarea
{
	resize: none;
	height: 100px;
}

input[type='radio']
{
    margin: calc(8px + 0.2vw);
}
label
{
	display: inline-block;
}
input[type='submit']
{
    width: 100%;
    padding: calc(20px + 1.5vw);
    border-radius: calc(20px + 1.5vw);
    margin: 15px 0 30px 0;
    font-size: 1.2em;
    cursor: pointer;
    background: #5FC023;
    border: 0;
    outline: 0;
    color: white;
    font-family: 'Roboto', sans-serif;
    -webkit-transition: .7s;
    -moz-transition: .7s;
    -ms-transition:.7s;
    -o-transition:.7s;
    transition: .7s;
}
input[type='submit']:hover 
{
	background: #5FE023;
    font-size: 1.4em;
}
.error
{
	position: absolute;
	bottom: 0;
	left:  50%;
	font-size: calc(13px + 0.4vw);
	transform: translate(-50%, 100%);
	color: red;
	width: 100%;
}
.input-error
	{border-color: #e90000!important;}
.input-error:hover
	{border-color: #bb0000!important;}
#email,
#telnum
	{position: relative}
#policy,
#radiochoice
{
    font-family: 'Roboto', sans-serif;
    width: 100%;
    display: inline-block;
    margin-bottom: calc(15px + 1vw);
	position: relative;
}
#policy>label>a
	{display:inline-block}
#formcontainer
{
    width: 90%;
    margin-left: auto;
    margin-right: auto;
}

#captcha
{
	display: inline-block;
	max-width: 100%;
}

#rc-imageselect, .g-recaptcha 
{transform:scale(0.68);-webkit-transform:scale(0.68);transform-origin:0 0;-webkit-transform-origin:0 0;} 
#captcha
{height: 54px; width: 211px;}

/* Small devices (280px and up) */
@media only screen and (min-width: 280px) {
	#rc-imageselect, .g-recaptcha 
	{transform:scale(0.8);-webkit-transform:scale(0.8);} 
	#captcha
	{height: 63px; width: 248px;}
} 
/* Small devices (phones, 350px and up) */
@media only screen and (min-width: 350px) {
	#rc-imageselect, .g-recaptcha 
	{transform:scale(1);-webkit-transform:scale(1);} 
	#captcha
	{height: 78px; width: 310px;}
} 

/* Small devices (large phones, 540px and up) */
@media only screen and (min-width: 540px) {
	
	
} 
/* Small devices (portrait tablets, landscape phones, 640px and up) */
@media only screen and (min-width: 640px) {
    
	#email,
	#telnum,
	input[type='submit'], textarea,select
	{
		width: 80%;
	}
	input[type='text']
	{
		width: 40%;
	}
} 

/* Medium devices (landscape tablets, 800px and up) */
@media only screen and (min-width: 800px) {
	body,
	h3
	{
		font-size: calc(10px + 1vw);
		line-height: calc(12px + 1.2vw);
	}
	select, input[type='text'] , textarea
	{
		width: 80%;
		padding: calc(10px + 1.5vw);
		border-radius: calc(10px + 1.5vw);
	}
	input[type='text']
		{width: 40%;}
	#email
		{width: 50%;}
	#telnum
		{width: 30%;}
	textarea
		{height: 150px;}
	#prefhdr
	{
		width: 40%; 
		display: inline-block;
		line-height: 2;
		position: relative;
		top: 50%;
		transform: translate(0, -50%);
	}
	#radiochoice
	{
		width: 20%;
		margin: 0;
	}
	input[type="submit"]
	{
		width: calc(80% - 310px);
		line-height: 78px;
		padding: 0;
	}
} 

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	#formcontainer
	{
		position: relative;
		top: 50%;
		transform: translate(0, -50%);
	}
	#part1
	{
		width: 60%;
		float: left;
	}
	#part2
	{
		width: 38%;
		float: left;
	}
	#upper::after
		{clear: both;}
	select, input[type='text'], textarea
	{
		width: 90%;
	}
	select, input[type='text'] , input[type='tel'] , input[type='email'], textarea
	{
		padding: calc(8px + 1vw);
		border-radius: calc(8px + 1vw);
	}
	input[type='text']
		{width: 45%;}
	#email
		{width: 55%;}
	#telnum
		{width: 35%;}
	#part2>h3
	{margin: calc(5px + 0.5vw) 0}
	textarea
	{
		height: calc(100px + 6.5vw);
	}
	#prefhdr
	{
		width: 100%;
		display: inline-block;
		line-height: 1;
		margin: calc(5px + 0.5vw) 0;
	}
	#radiochoice
	{
		width: 100%;
	}
	input[type="submit"]
	{
		width: calc(95% - 400px);
		font-size: 25px;
		line-height: 78px;
		padding: 0;
	}
	input[type='submit']:hover 
	{
		font-size: 28px;
	}
} 

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {

}
/* Extra enormous devices (TV, 1700px and up) */
@media only screen and (min-width: 1700px) {
	
}

